test/scc/expr/semantic-errors/121.a
121.t:6:19: error: too many initializer values